# bzlmod_debug_java_example

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  MODULE.bazel  README.md  WORKSPACE.bazel  maven_install.json
scripts/java/: mvn_repin_unpinned.sh
src/hello_java/: BUILD.bazel
src/hello_java/java/com/github/jstuder_gh/examples/bzlmod/: Main.java
